Update to Bukkit 1.17 and Java 16
Partially addresses #37 (probably)
Efficiency enchant no longer requires scheduler-based updating thanks to new event